k8s/namespace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 4life
  labels: { app.kubernetes.io/part-of: 4life }
